--- a/Sungatullina_resume.tex
+++ b/Sungatullina_resume.tex
@@ -5,7 +5,7 @@
 \usepackage{hyperref}
 \addtokomafont{labelinglabel}{\sffamily}
 \usepackage[left=0.5in,top=0.5in,right=0.5in,bottom=0.5in]{geometry} % Document margins
-\newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
+\newcommand{\tab}[1]{\hspace{.25\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Gulnara Sungatullina} 
 \address{\space+79196827058 \\ sungatullina.gg@phystech.edu \\ t.me/Julnara \\ \textcolor{blue}{\href{https://github.com/sungulnara2000}{github.com/sungulnara2000}}}
@@ -15,8 +15,7 @@
 \\ Bachelor in Applied Mathematics and Computer Science
 \\ Department of Innovation and High Technology
 \\ GPA: 4.6/5
-\\
-\\ {\bf Relevant courses}: Algorithms and Data Structures, C++, Computer Architecture of Operating Systems, Programming Technology, Databases, Discrete Mathematics, Algebra, Differential Equations, Calculus
+\\ {\bf Relevant courses}: Algorithms \& Data Structures, C++, Computer Architecture \& Operating Systems, Databases, Discrete Analysis, Algebra, Calculus, Probability, Differential Equations, Programming Technology.
 \\{\bf Extra}: Deep Learning School (ML basics, pytorch, optimizations, CV)
 \end{rSection}
 
@@ -78,16 +77,18 @@ Technologies \ & experienced with Git, Linux, PostgreSQL, Jupyter, Colab, Docker
 
 
 \begin{rSection}{Achievements}
-\begin{rSubsection}{National Technological Initiative Olympiad $|$ Unmanned aircraft systems}{\em March 2018}{top in team standings, individual prize-winner}{Moscow, Russia}
+\begin{rSubsection}{National Technological Initiative Olympiad $|$ Unmanned aircraft systems}{\em March 2018}{first in the team competition, individual prize-winner}{Moscow, Russia}
 \renewcommand\labelitemi{\tiny$\bullet$}
 \begin{itemize}[noitemsep, parsep=0pt, leftmargin=*]
     \item Simulated and programmed(C++) a mathematical model of airplane flight.
     \item Launched an airplane model and reached 5\% deviation from the perfect flight path.
-    \item Beat 9 other teams by a large margin.
+    \item Beat 9 other teams by a landslide.
 \end{itemize}
 \end{rSubsection}
 
-{\bf "Phystech" Olympiad in Mathematics} - {\em winner} \hfill{\em Feb 2018}
+
+{\bf Olympiad of MIPT $|$ Mathematics} - {\em first degree diploma} \hfill{\em Feb 2018}
+
 \end{rSection}
 
 \begin{rSection}{Personal}
@@ -101,7 +102,7 @@ Spoken languages \ & English - B2, Russian - native, Tatar - native
 \renewcommand\labelitemi{\tiny$\bullet$}
 \begin{itemize}[noitemsep, parsep=0pt, leftmargin=*]
     \item Organized MIPT Olympiad for more than 100 schoolchildren.
-    \item {\bf Hach\&Change hackathon}: solved the problem of placing self-pickup points using Voronoi diagram and ML.
+    \item {\bf Hach\&Change hackathon}: solved the problem of placing self-pickup points using Voronoi diagram and ML algorithms.
 \end{itemize}
 \end{rSection}
 
